--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Culto da Cicatriz - Todos os direitos reservados.</p>
+        <p>&copy; 37°16'09.3"N 79°56'31.3"W</p>
     </footer>
 
     <script src="script.js"></script>
