--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <nav>
         <ul>
-            <li><a href="index.html">Início</a></li>
+            <li><a href="index.html">C5 (OUROBOROS)</a></li>
             <li><a href="posts/post1.html">CNUQX</a></li>
             <li><a href="posts/post2.html">Caminho das Marcas</a></li>
         </ul>
