--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Blog Variado - Todos os direitos reservados.</p>
+        <p>&copy; MANOS.</p>
     </footer>
 
     <script src="script.js"></script>
